--- a/AntiqueStore/pom.xml
+++ b/AntiqueStore/pom.xml
@@ -19,5 +19,12 @@
                 </configuration>
             </plugin></plugins>
     </build>
+    <dependencies>
+        <dependency>
+            <groupId>com.googlecode.json-simple</groupId>
+            <artifactId>json-simple</artifactId>
+            <version>1.1.1</version>
+        </dependency>
+    </dependencies>
 
 </project>
